--- a/assets/scss/vars/typography.scss
+++ b/assets/scss/vars/typography.scss
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: "Roag-Bold";
+  src: url("/fonts/Roag-Bold.eot");
+  src: url("/fonts/Roag-Bold.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/Roag-Bold.svg#Roag-Bold") format("svg"),
+    url("/fonts/Roag-Bold.ttf") format("truetype"),
+    url("/fonts/Roag-Bold.woff") format("woff"),
+    url("/fonts/Roag-Bold.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roag-Light";
+  src: url("/fonts/Roag-Light.eot");
+  src: url("/fonts/Roag-Light.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/Roag-Light.svg#Roag-Light") format("svg"),
+    url("/fonts/Roag-Light.ttf") format("truetype"),
+    url("/fonts/Roag-Light.woff") format("woff"),
+    url("/fonts/Roag-Light.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roag-ExtraBoldItalic";
+  src: url("/fonts/Roag-ExtraBoldItalic.eot");
+  src: url("/fonts/Roag-ExtraBoldItalic.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/Roag-ExtraBoldItalic.svg#Roag-ExtraBoldItalic") format("svg"),
+    url("/fonts/Roag-ExtraBoldItalic.ttf") format("truetype"),
+    url("/fonts/Roag-ExtraBoldItalic.woff") format("woff"),
+    url("/fonts/Roag-ExtraBoldItalic.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 $font-roag-light: "Roag-Light";
 $font-roag-bold: "Roag-Bold";
 $font-roag-extra-bold-italic: "Roag-ExtraBoldItalic";
